--- a/registration.html
+++ b/registration.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Budget</title>
-
+    <title>Registration Personal Budget</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -31,45 +30,53 @@
         <article>
             <div>
                 <blockquote class="blockquote d-block w-100">
-                    <h2 class="text-center p-5">Witaj w mobilnym budżecie osobistym</h2>
+                    <h2 class="text-center p-5">Wprowadź potrzebne dane i zarejestruj:</h2>
                 </blockquote>
             </div>
-            <div class="row m-5">
-                <div class="col-md-2 border-right">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="currentColor"
-                        class="bi bi-calendar-check" viewBox="0 0 16 16">
-                        <path
-                            d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-                        <path
-                            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-                    </svg>
-                    <i class="bi bi-calendar-check"></i>
-                </div>
-                <div id="carouselExampleSlidesOnly" class="carousel slide col-md-10" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <blockquote class="blockquote d-block w-100">
-                                <h3 class="m-3">Chcesz mieć stały dostęp do informacji o swoim budżecie?</h3>
-                            </blockquote>
+            <div>
+                <form action="#">
+                    <div class="d-flex align-items-center flex-column  ">
+                        <div class="input-group col-md-4 col-7 m-1">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                        height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                                        <path
+                                            d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
+                                    </svg></span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="imię">
                         </div>
-                        <div class="carousel-item">
-                            <blockquote class="blockquote d-block w-100">
-                                <h3 class="m-3">Masz problem z kontrolowaniem wydatków?</h3>
-                            </blockquote>
+                        <div class="input-group col-md-4 col-7 m-1">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                        height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                                        <path
+                                            d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
+                                    </svg></span>
+                            </div>
+                            <input type="email" class="form-control" placeholder="e-mail">
                         </div>
-                        <div class="carousel-item">
-                            <blockquote class="blockquote d-block w-100">
-                                <h3 class="m-3">Ta strona jest właśnie dla Ciebie!</h3>
-                            </blockquote>
+                        <div class="input-group col-md-4 col-7 m-1">
+                            <div class=" input-group-prepend">
+                                <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                        height="16" fill="currentColor" class="bi bi-key" viewBox="0 0 16 16">
+                                        <path
+                                            d="M0 8a4 4 0 0 1 7.465-2H14a.5.5 0 0 1 .354.146l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0L13 9.207l-.646.647a.5.5 0 0 1-.708 0L11 9.207l-.646.647a.5.5 0 0 1-.708 0L9 9.207l-.646.647A.5.5 0 0 1 8 10h-.535A4 4 0 0 1 0 8zm4-3a3 3 0 1 0 2.712 4.285A.5.5 0 0 1 7.163 9h.63l.853-.854a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.793-.793-1-1h-6.63a.5.5 0 0 1-.451-.285A3 3 0 0 0 4 5z" />
+                                        <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                                    </svg></span>
+                            </div>
+                            <input type="password" class="form-control" placeholder="hasło">
                         </div>
+                    </div>
+                </form>
+                <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-center col-8 m-5">
+                        <a class="btn btn-secondary col-2 m-2" href="#" role="button">Cofnij</a>
+                        <input class="btn btn-success col-4 m-2" type="submit" value="Zarejestruj">
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-around m-5">
-                <a class="btn btn-danger btn-lg d-md-inline col-md-3 m-3" href="#" role="button">Rejestracja</a>
 
-                <a class="btn btn-success btn-lg d-md-inline col-md-3 m-3" href="#" role="button">Logowanie</a>
-            </div>
         </article>
         <blockquote class="blockquote bg-primary text-white text-right p-2 mt-5">
             <p class="mb-0">
@@ -84,7 +91,6 @@
 
 
     </div>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
