--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Personal Budget</title>
+    <title>Login Personal Budget</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -30,22 +30,12 @@
         <article>
             <div>
                 <blockquote class="blockquote d-block w-100">
-                    <h2 class="text-center p-5">Wprowadź potrzebne dane i zarejestruj:</h2>
+                    <h2 class="text-center p-5">Wprowadź potrzebne dane i zaloguj:</h2>
                 </blockquote>
             </div>
             <div>
                 <form action="#">
                     <div class="d-flex align-items-center flex-column  ">
-                        <div class="input-group col-md-4 col-7 m-1">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                        height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                                        <path
-                                            d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
-                                    </svg></span>
-                            </div>
-                            <input type="text" class="form-control" placeholder="imię">
-                        </div>
                         <div class="input-group col-md-4 col-7 m-1">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg" width="16"
@@ -72,7 +62,7 @@
                 <div class="d-flex justify-content-center">
                     <div class="d-flex justify-content-center col-8 m-5">
                         <a class="btn btn-secondary col-2 m-2 p-1" href="#" role="button">Cofnij</a>
-                        <input class="btn btn-success col-4 m-2 p-1" type="submit" value="Zarejestruj">
+                        <input class="btn btn-success col-4 m-2 p-1" type="submit" value="Zaloguj">
                     </div>
                 </div>
             </div>
