--- a/addincome.html
+++ b/addincome.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Menu Personal Budget</title>
+    <title>Add Income Budget</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -29,14 +29,14 @@
         <article>
             <div>
                 <blockquote class="blockquote d-block w-100">
-                    <h2 class="text-center p-5">Witaj IMIĘ w Menu Głównym</h2>
+                    <h2 class="text-center p-5">Wprowadź dane przychodu:</h2>
                 </blockquote>
                 <div class="row">
                     <div class="col-3 border-right pr-0">
                         <div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist"
                             aria-orientation="vertical">
-                            <a class="nav-link text-center  active" id="v-pills-home-tab" data-toggle="pill" href="#"
-                                role="tab" aria-controls="v-pills-home" aria-selected="true"><svg
+                            <a class="nav-link text-center" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab"
+                                aria-controls="v-pills-home" aria-selected="false"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                                     class="bi bi-house-fill" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
@@ -44,8 +44,8 @@
                                     <path fill-rule="evenodd"
                                         d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
                                 </svg> Strona Główna</a>
-                            <a class="nav-link text-center " id="v-pills-profile-tab" data-toggle="pill" href="#"
-                                role="tab" aria-controls="v-pills-profile" aria-selected="false"><svg
+                            <a class="nav-link text-center active" id="v-pills-profile-tab" data-toggle="pill" href="#"
+                                role="tab" aria-controls="v-pills-profile" aria-selected="true"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                                     class="bi bi-cash-coin" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
@@ -88,7 +88,54 @@
                         </div>
                     </div>
                     <div class="col-9 text-center">
-                        <img src="img/biznesmen.jpg" class="img-fluid" alt="Responsive image">
+                        <form action="#">
+                            <div class="d-flex align-items-center flex-column  ">
+                                <div class="input-group col-md-4 col-7 m-1">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg"
+                                                width="20" height="20" fill="currentColor" class="bi bi-pencil-square"
+                                                viewBox="0 0 16 16">
+                                                <path
+                                                    d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                                <path fill-rule="evenodd"
+                                                    d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                                            </svg></span>
+                                    </div>
+                                    <input type="number" class="form-control" placeholder="kwota">
+                                </div>
+                                <div class="input-group col-md-4 col-7 m-1">
+                                    <div class=" input-group-prepend">
+                                        <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg"
+                                                width="20" height="20" fill="currentColor" class="bi bi-pencil-square"
+                                                viewBox="0 0 16 16">
+                                                <path
+                                                    d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                                <path fill-rule="evenodd"
+                                                    d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                                            </svg></span>
+                                    </div>
+                                    <input type="datetime-local" class="form-control" placeholder="Data przychodu">
+                                </div>
+                                <div class="input-group col-md-4 col-7 m-1">
+                                    <select class="form-control" name="income">
+                                        <option value="WY">Wynagrodzenie</option>
+                                        <option value="OB">Odsetki Bankowe</option>
+                                        <option value="SA">Sprzedaż na Allegro</option>
+                                        <option value="IN">Inne</option>
+                                    </select>
+                                </div>
+                                <div class="input-group col-md-4 col-7 m-1">
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                                        placeholder="Dodaj komentarz"></textarea>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <div class="d-flex justify-content-center col-8 m-5">
+                                    <a class="btn btn-secondary col-2 m-2 p-1" href="#" role="button">Anuluj</a>
+                                    <input class="btn btn-success col-4 m-2 p-1" type="submit" value="Dodaj Przychód">
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
