--- a/addincome.html
+++ b/addincome.html
@@ -86,6 +86,9 @@
                                         d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117zM11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5zM4 1.934V15h6V1.077l-6 .857z" />
                                 </svg>Wyloguj się</a>
                         </div>
+                        <div>
+                            <p id="logIn" class="text-success mt-5 p-3">Zalogowany: Użytkownik</p>
+                        </div>
                     </div>
                     <div class="col-9 text-center">
                         <form action="#">
@@ -101,7 +104,7 @@
                                                     d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
                                             </svg></span>
                                     </div>
-                                    <input type="number" class="form-control" placeholder="kwota">
+                                    <input type="number" min="0" step="0.01" class="form-control" placeholder="kwota">
                                 </div>
                                 <div class="input-group col-md-4 col-7 m-1">
                                     <div class=" input-group-prepend">
@@ -114,7 +117,7 @@
                                                     d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
                                             </svg></span>
                                     </div>
-                                    <input type="datetime-local" class="form-control" placeholder="Data przychodu">
+                                    <input type="date" class="form-control" placeholder="Data przychodu">
                                 </div>
                                 <div class="input-group col-md-4 col-7 m-1">
                                     <select class="form-control" name="income">
