--- a/main-menu.html
+++ b/main-menu.html
@@ -86,6 +86,9 @@
                                         d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117zM11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5zM4 1.934V15h6V1.077l-6 .857z" />
                                 </svg>Wyloguj się</a>
                         </div>
+                        <div>
+                            <p id="logIn" class="text-success mt-5 p-3">Zalogowany: Użytkownik</p>
+                        </div>
                     </div>
                     <div class="col-9 text-center">
                         <img src="img/biznesmen.jpg" class="img-fluid" alt="Responsive image">
