--- a/balance.html
+++ b/balance.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Expense Budget</title>
+    <title>Show Balance Budget</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -29,14 +29,14 @@
         <article>
             <div>
                 <blockquote class="blockquote d-block w-100">
-                    <h2 class="text-center p-5">Wprowadź dane wydatku:</h2>
+                    <h2 class="text-center p-5">Przeglądaj bilans z wybranego okresu:</h2>
                 </blockquote>
                 <div class="row">
                     <div class="col-3 border-right pr-0">
                         <div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist"
                             aria-orientation="vertical">
-                            <a class="nav-link text-center" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab"
-                                aria-controls="v-pills-home" aria-selected="false"><svg
+                            <a class="nav-link text-center" id="v-pills-home-tab" data-toggle="pill" href="#"
+                                role=" tab" aria-controls="v-pills-home" aria-selected="false"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                                     class="bi bi-house-fill" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
@@ -56,15 +56,15 @@
                                         d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083c.058-.344.145-.678.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1H1z" />
                                     <path d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 5.982 5.982 0 0 1 3.13-1.567z" />
                                 </svg> Dodaj Przychód</a>
-                            <a class="nav-link text-center active" id="v-pills-messages-tab" data-toggle="pill" href="#"
-                                role="tab" aria-controls="v-pills-messages" aria-selected="true"><svg
+                            <a class="nav-link text-center" id="v-pills-messages-tab" data-toggle="pill" href="#"
+                                role="tab" aria-controls="v-pills-messages" aria-selected="false"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                                     class="bi bi-cart4" viewBox="0 0 16 16">
                                     <path
                                         d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
                                 </svg> Dodaj Wydatek</a>
-                            <a class="nav-link text-center " id="v-pills-settings-tab" data-toggle="pill" href="#"
-                                role="tab" aria-controls="v-pills-settings" aria-selected="false"><svg
+                            <a class="nav-link text-center active" id="v-pills-settings-tab" data-toggle="pill" href="#"
+                                role="tab" aria-controls="v-pills-settings" aria-selected="true"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                                     class="bi bi-list-check" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
@@ -90,77 +90,58 @@
                             <p id="logIn" class="text-success mt-5 p-3">Zalogowany: Użytkownik</p>
                         </div>
                     </div>
-                    <div class="col-9 text-center">
+                    <div class="col-9 pl-0">
                         <form action="#">
-                            <div class="d-flex align-items-center flex-column  ">
-                                <div class="input-group col-md-4 col-7 m-1">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg"
-                                                width="20" height="20" fill="currentColor" class="bi bi-pencil-square"
-                                                viewBox="0 0 16 16">
-                                                <path
-                                                    d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-                                                <path fill-rule="evenodd"
-                                                    d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
-                                            </svg></span>
+                            <div class="d-flex justify-content-around bg-light py-2">
+                                <div>
+                                    <div class="custom-control custom-radio">
+                                        <input type="radio" id="customRadio1" name="customRadio"
+                                            class="custom-control-input" checked>
+                                        <label class="custom-control-label" for="customRadio1">Bieżący miesiąc</label>
                                     </div>
-                                    <input type="number" min="0.01" step="0.01" class="form-control"
-                                        placeholder="kwota">
-                                </div>
-                                <div class="input-group col-md-4 col-7 m-1">
-                                    <div class=" input-group-prepend">
-                                        <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg"
-                                                width="20" height="20" fill="currentColor" class="bi bi-pencil-square"
-                                                viewBox="0 0 16 16">
-                                                <path
-                                                    d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-                                                <path fill-rule="evenodd"
-                                                    d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
-                                            </svg></span>
+                                    <div class="custom-control custom-radio">
+                                        <input type="radio" id="customRadio2" name="customRadio"
+                                            class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadio2">Poprzedni miesiąc</label>
                                     </div>
-                                    <input type="date" class="form-control">
+                                    <div class="custom-control custom-radio">
+                                        <input type="radio" id="customRadio3" name="customRadio"
+                                            class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadio3">Bieżący rok</label>
+                                    </div>
                                 </div>
-                                <div class="input-group col-md-4 col-7 m-1">
-                                    <select class="form-control" name="pay">
-                                        <option value="" disabled selected hidden>Wybierz sposób płatności</option>
-                                        <option value="GT">Gotówka</option>
-                                        <option value="KD">Karta debetowa</option>
-                                        <option value="KK">Karta kredytowa</option>
-                                    </select>
+                                <div>
+                                    <div class="custom-control custom-radio">
+                                        <input type="radio" id="customRadio4" name="customRadio"
+                                            class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadio4">Wybrany okres</label>
+
+                                        <div class="input-group m-1 pl-0">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text" id="basic-addon1">Od:</span>
+                                            </div>
+                                            <input type="date" class="form-control" placeholder="Data przychodu">
+                                        </div>
+                                        <div class="input-group m-1 pl-0">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text" id="basic-addon1">Do:</span>
+                                            </div>
+                                            <input type="date" class="form-control" placeholder="Data przychodu">
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="input-group col-md-4 col-7 m-1">
-                                    <select class="form-control" name="category">
-                                        <option value="" disabled selected hidden>Wybierz kategorię wydatku</option>
-                                        <option value="JE">Jedzenie</option>
-                                        <option value="MI">Mieszkanie</option>
-                                        <option value="TR">Transport</option>
-                                        <option value="TL">Telekomunikacja</option>
-                                        <option value="OZ">Opieka Zdrowotna</option>
-                                        <option value="UB">Ubranie</option>
-                                        <option value="HG">Higiena</option>
-                                        <option value="DZ">Dzieci</option>
-                                        <option value="RO">Rozrywka</option>
-                                        <option value="WY">Wycieczka</option>
-                                        <option value="SZ">Szkolenia</option>
-                                        <option value="KS">Książki</option>
-                                        <option value="OS">Oszczędności</option>
-                                        <option value="EM">Emerytura</option>
-                                        <option value="DŁ">Dług</option>
-                                        <option value="DA">Darowizna</option>
-                                        <option value="IN">Inne</option>
-                                    </select>
+                                <div><button type="submit" class="btn btn-outline-dark">Przeglądaj bilans</button></div>
+
+                            </div>
+                            <div class="d-flex justify-content-around py-3">
+                                <div>
+                                    <h4>Przychody:</h4>
                                 </div>
-                                <div class="input-group col-md-4 col-7 m-1">
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                                        placeholder="Dodaj komentarz"></textarea>
+                                <div>
+                                    <h4>Wydatki:</h4>
                                 </div>
                             </div>
-                            <div class="d-flex justify-content-center">
-                                <div class="d-flex justify-content-center col-8 m-5">
-                                    <a class="btn btn-secondary col-2 m-2 p-1" href="#" role="button">Anuluj</a>
-                                    <input class="btn btn-success col-4 m-2 p-1" type="submit" value="Dodaj Wydatek">
-                                </div>
-                            </div>
+
                         </form>
                     </div>
                 </div>
