--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
                 </div>
             </div>
             <div class="row justify-content-around m-5">
-                <a class="btn btn-danger btn-lg d-md-inline col-md-3 m-3" href="#" role="button">Rejestracja</a>
+                <a class="btn btn-danger btn-lg d-md-inline col-md-3 m-3" href="registration.html"
+                    role="button">Rejestracja</a>
 
-                <a class="btn btn-success btn-lg d-md-inline col-md-3 m-3" href="#" role="button">Logowanie</a>
+                <a class="btn btn-success btn-lg d-md-inline col-md-3 m-3" href="login.html" role="button">Logowanie</a>
             </div>
         </article>
         <blockquote class="blockquote bg-primary text-white text-right p-2 mt-5">
