--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="d-flex justify-content-center">
                         <div class="d-flex justify-content-center col-8 m-5">
-                            <a class="btn btn-secondary col-2 m-2 p-1" href="#" role="button">Cofnij</a>
+                            <a class="btn btn-secondary col-2 m-2 p-1" href="index.html" role="button">Cofnij</a>
                             <input class="btn btn-success col-4 m-2 p-1" type="submit" value="Zaloguj">
                         </div>
                     </div>
