--- a/balance.html
+++ b/balance.html
@@ -10,9 +10,23 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&display=swap" rel="stylesheet">
+
+    <script type="text/javascript">
+        function actualDate() {
+            var date = new Date();
+
+            var day = date.getDate();
+            var month = date.getMonth() + 1;
+            var year = date.getFullYear() + 1;
+
+            documet.getElementById('d1').value = date;
+            documet.getElementById('d2').value = date;
+        }
+    </script>
+
 </head>
 
-<body>
+<body onload="actualDate();">
     <div class="container bg-white p-0 modal-xl">
         <header>
             <div class="bg-primary">
@@ -113,13 +127,13 @@
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text" id="basic-addon1">Od:</span>
                                             </div>
-                                            <input type="date" class="form-control">
+                                            <input id="d1" type="date" value="" class="form-control">
                                         </div>
                                         <div class="input-group m-1 pl-0">
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text" id="basic-addon2">Do:</span>
                                             </div>
-                                            <input type="date" class="form-control">
+                                            <input id="d2" type="date" class="form-control">
                                         </div>
                                     </div>
                                 </div>
@@ -163,6 +177,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
