--- a/registration.html
+++ b/registration.html
@@ -65,7 +65,7 @@
                                         <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
                                     </svg></span>
                             </div>
-                            <input type="password" class="form-control" placeholder="hasło">
+                            <input id="password" type="password" class="form-control" placeholder="hasło">
                         </div>
                     </div>
                     <div class="d-flex justify-content-center">
@@ -101,6 +101,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
